--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -85,10 +85,12 @@ See [Recent Additions and Updates](recent.html).
 * [Manifest v2 schema](manifest-v2.html)
     * [Links](links.html)
     * [Link properties](links-properties.html)
+    * [Link DNS integration](link-dns.html)
     * [Manual linking](links-manual.html)
     * [Renaming/migrating instance groups](migrated-from.html)
 * [Persistent and orphaned disks](persistent-disks.html)
     * [Customizing persistent disk FS](persistent-disk-fs.html)
+* [Native DNS Support](dns.html) [alpha]
 
 ### <a id="cpi-config"></a> Detailed CPI configuration & troubleshooting
 
