--- a/recent.html.md.erb
+++ b/recent.html.md.erb
@@ -2,6 +2,10 @@
 title: Recent Additions and Updates
 ---
 
+* [Native DNS Support](dns.html) [alpha]
+
+---
+
 * [CLI v2](cli-v2.html)
 * [CPI config](cpi-config.html)
 
