fix stemcell link

--- a/build-stemcell.html.md.erb
+++ b/build-stemcell.html.md.erb
@@ -4,7 +4,7 @@ title: Stemcell Building
 
 (See [What is a Stemcell?](stemcell.html) for an introduction to stemcells.)
 
-To build a stemcell tarball for a supported IaaS-OS combination follow instructions in the [bosh-stemcell's README](https://github.com/cloudfoundry/bosh/tree/master/src/bosh-stemcell).
+To build a stemcell tarball for a supported IaaS-OS combination follow instructions in the [bosh-linux-stemcell-builder's README](https://github.com/cloudfoundry/bosh-linux-stemcell-builder/blob/master/README.md).
 
 Stemcell tarballs are currently specific to an IaaS-OS/CPI because they may:
 
