--- a/deployment-manifest.html.md.erb
+++ b/deployment-manifest.html.md.erb
@@ -82,6 +82,7 @@ See [networks](networks.html) for more details.
 - [See Azure CPI network cloud properties](azure-cpi.html#networks)
 - [See OpenStack CPI network cloud properties](openstack-cpi.html#networks)
 - [See Softlayer CPI network cloud properties](softlayer-cpi.html#networks)
+- [See Google Cloud Platform CPI network cloud properties](google-cpi.html#networks)
 - [See vSphere CPI network cloud properties](vsphere-cpi.html#networks)
 - [See vCloud CPI network cloud properties](vcloud-cpi.html#networks)
 
@@ -140,6 +141,7 @@ resource_pools:
 - [See Azure CPI resource pool cloud properties](azure-cpi.html#resource-pools)
 - [See OpenStack CPI resource pool cloud properties](openstack-cpi.html#resource-pools)
 - [See Softlayer CPI resource pool cloud properties](softlayer-cpi.html#resource-pools)
+- [See Google Cloud Platform CPI resource pool cloud properties](google-cpi.html#resource-pools)
 - [See vSphere CPI resource pool cloud properties](vsphere-cpi.html#resource-pools)
 - [See vCloud CPI resource pool cloud properties](vcloud-cpi.html#resource-pools)
 
@@ -168,6 +170,7 @@ disk_pools:
 - [See Azure CPI disk pool cloud properties](azure-cpi.html#disk-pools)
 - [See OpenStack CPI disk pool cloud properties](openstack-cpi.html#disk-pools)
 - [See Softlayer CPI disk pool cloud properties](softlayer-cpi.html#disk-pools)
+- [See Google Cloud Platform CPI disk pool cloud properties](google-cpi.html#disk-pools)
 - [See vSphere CPI disk pool cloud properties](vsphere-cpi.html#disk-pools)
 - [See vCloud CPI disk pool cloud properties](vcloud-cpi.html#disk-pools)
 
