--- a/networks.html.md.erb
+++ b/networks.html.md.erb
@@ -280,5 +280,6 @@ The Director does not enforce how many networks can be assigned to each job inst
 - [See Azure CPI network cloud properties](azure-cpi.html#networks)
 - [See OpenStack CPI network cloud properties](openstack-cpi.html#networks)
 - [See Softlayer CPI network cloud properties](softlayer-cpi.html#networks)
+- [See Google Cloud Platform CPI network cloud properties](google-cpi.html#networks)
 - [See vSphere CPI network cloud properties](vsphere-cpi.html#networks)
 - [See vCloud CPI network cloud properties](vcloud-cpi.html#networks)
