Command `bosh status` doesn't work in V2, change to `bosh env`

--- a/manifest-v2.html.md.erb
+++ b/manifest-v2.html.md.erb
@@ -24,7 +24,7 @@ Assuming that you are using [cloud config](cloud-config.html), your deployment m
 
 **name** [String, required]: The name of the deployment. A single Director can manage multiple deployments and distinguishes them by name.
 
-**director_uuid** [String, required]: This string must match the UUID of the currently targeted Director for the CLI to allow any operations on the deployment. Use `bosh status` to display the UUID of the currently targeted Director.
+**director_uuid** [String, required]: This string must match the UUID of the currently targeted Director for the CLI to allow any operations on the deployment. Use `bosh env` to display the UUID of the currently targeted Director.
 
 Example:
 
