openstack: default_security_groups is an array

--- a/init-openstack.html.md.erb
+++ b/init-openstack.html.md.erb
@@ -162,7 +162,7 @@ You must create and configure two Security Groups to restrict incoming network t
         -v auth_url=test \
         -v az=test \
         -v default_key_name=test \
-        -v default_security_groups=test \
+        -v default_security_groups=[test] \
         -v net_id=test \
         -v openstack_password=test \
         -v openstack_username=test \
