--- a/cli-v2.html.md.erb
+++ b/cli-v2.html.md.erb
@@ -11,8 +11,9 @@ The BOSH Command Line Interface (CLI) is what you use to run BOSH commands. CLI 
 
 1. Download the binary for your platform and place it on your `PATH`:
 
-  - [bosh-cli-2.0.26-darwin-amd64](https://s3.amazonaws.com/bosh-cli-artifacts/bosh-cli-2.0.26-darwin-amd64) <span class="sha1">sha1: b16bde7d086d915445aa64dc9e677ff6df01b40d</span>
-  - [bosh-cli-2.0.26-linux-amd64](https://s3.amazonaws.com/bosh-cli-artifacts/bosh-cli-2.0.26-linux-amd64) <span class="sha1">sha1: a80ceb27880673e9fd79d44a2d11d05f3dc1ccdc</span>
+  - [bosh-cli-2.0.28-darwin-amd64](https://s3.amazonaws.com/bosh-cli-artifacts/bosh-cli-2.0.28-darwin-amd64) <span class="sha1">sha1: c627e1d508b7fea20137c2e74906fd11a4139a2b</span>
+  - [bosh-cli-2.0.28-linux-amd64](https://s3.amazonaws.com/bosh-cli-artifacts/bosh-cli-2.0.28-linux-amd64) <span class="sha1">sha1: 7b7629fcdf8839cf29bf25d97e8ea6beb3b9a7b2</span>
+  - [bosh-cli-2.0.28-windows-amd64.exe](https://s3.amazonaws.com/bosh-cli-artifacts/bosh-cli-2.0.28-windows-amd64.exe) <span class="sha1">sha1: 7ee46451e012f675fdb63074638f2538cd562dcf</span> (Windows CLI support is partial)
 
     <pre class="terminal">
     $ chmod +x ~/Downloads/bosh-cli-*
