cli v2 gets dedicated section

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -60,7 +60,12 @@ See [Recent Additions and Updates](recent.html).
     * [Managing releases](managing-releases.html)
     * [Managing stemcells](managing-stemcells.html)
 * [Deploying step-by-step](deploying-step-by-step.html)
-* [CLI v2](cli-v2.html)
+* [Director tasks](director-tasks.html)
+* [Troubleshooting](tips.html)
+
+### <a id="cli-v2"></a> CLI v2
+
+* [Command reference](cli-v2.html)
     * [`create-env` Dependencies](cli-env-deps.html)
     * [Differences between CLI v2 vs v1](cli-v2-diff.html)
     * [Global Flags](cli-global-flags.html)
@@ -68,8 +73,6 @@ See [Recent Additions and Updates](recent.html).
     * [Operations files](cli-ops-files.html)
     * [Variable Interpolation](cli-int.html)
     * [Tunneling](cli-tunnel.html)
-* [Director tasks](director-tasks.html)
-* [Troubleshooting](tips.html)
 
 ### <a id="deployment-config"></a> Detailed deployment configuration
 
@@ -177,7 +180,7 @@ See [Recent Additions and Updates](recent.html).
     * [Repacking Stemcells](repack-stemcell.html)
 
 ---
-## <a id="old-cli"></a> CLI v1
+## <a id="cli-v1"></a> CLI v1
 
 * [Install bosh-init](install-bosh-init.html)
     * [Using bosh-init](using-bosh-init.html)
