--- a/cli-v2.html.md.erb
+++ b/cli-v2.html.md.erb
@@ -34,6 +34,11 @@ The BOSH Command Line Interface (CLI) is what you use to run BOSH commands. CLI 
 Alternatively, refer to [cloudfoundry/homebrew-tap](https://github.com/cloudfoundry/homebrew-tap) to install CLI via Homebrew on OS X. We currently do not publish CLI via apt or yum repositories.
 
 ---
+## <a id="global-falgs"></a> Global Flags
+
+See [Global flags](cli-global-flags.html) for more details on how to enable different output formats, debug logging, etc.
+
+---
 ## <a id="cmds"></a> Commands
 
 ### <a id="env-mgmt"></a> Environments
