mention env vars

--- a/cli-envs.html.md.erb
+++ b/cli-envs.html.md.erb
@@ -96,6 +96,8 @@ Subsequent commands can just reference created alias.
 $ bosh -e aws env
 </pre>
 
+Alternatively you can set `export BOSH_ENVIRONMENT=aws` once instead of using `--environment` flag for each command.
+
 ---
 ## <a id="deployment-state"></a> Deployment State
 
