inline bosh lite instructions

--- a/init.html.md.erb
+++ b/init.html.md.erb
@@ -4,17 +4,16 @@ title: Creating an environment
 
 A single BOSH environment consists of the Director and deployments that it orchestrates. To create an empty environment, we first need to deploy the Director. The Director VM will include all necessary BOSH components that will be used to manage different IaaS resources.
 
-Depending on your IaaS, choose your next step:
+Choose your next step:
 
-- [AWS](init-aws.html)
-- [Azure](init-azure.html)
-- [Google](init-google.html)
-- [OpenStack](init-openstack.html)
-- [SoftLayer](init-softlayer.html)
-- [vCloud](init-vcloud.html)
-- [vSphere](init-vsphere.html)
-
-Alternatively, if you want a local BOSH environment we recommend to use [BOSH Lite](bosh-lite.html) which uses single VirtualBox VM and Warden containers as an IaaS.
+- [On Local machine using BOSH Lite](bosh-lite.html)
+- [On AWS](init-aws.html)
+- [On Azure](init-azure.html)
+- [On Google](init-google.html)
+- [On OpenStack](init-openstack.html)
+- [On SoftLayer](init-softlayer.html)
+- [On vCloud](init-vcloud.html)
+- [On vSphere](init-vsphere.html)
 
 We recommend that you update your BOSH environment frequently to stay on the latest version of BOSH.
 
